# ComponentSemantics

./: .gitignore  README.md  environment.yml  other.txt  pyproject.toml  requirements.txt  requirements_pip.txt
componentSemantics/: agreement.csv  attributed_embedding.ipynb  bert_based_classification.ipynb  category_terms.ipynb  category_terms_sklearn.ipynb  class_simil_stats.ipynb  class_term_based_classification.ipynb  comm_sizes.csv  community_extraction.py  component_space_analysis.ipynb  component_space_clustering.ipynb  components_vector_space.py  distances.csv  feature_extraction.py  feature_extraction_multi.py  feature_i.ipynb  feature_impo.py  java-projects - java-projects (1).csv  java-projects.final.csv  label_embeddings.ipynb  main.py  num_comm.csv  parallel_fe.py  peregrine.sh  peregrine_rename.sh  scores.csv  semantic_scores.py  similarity.py  term_based_classification.ipynb  terms_labels.py  tfidf_csv.ipynb  utils.py  vocab_check.py
componentSemantics/analysis/: annotation.py  components_vectors.py  doc_embedding_visualization.py  document_embedding.py  document_embedding_codebert.py  embedding_visualization.py  result_agg.py  semantic.py  similarity.py  vocab_check.py
componentSemantics/community/: community.py  extraction.py  feature_extraction.py  main.py  test.ipynb
componentSemantics/csio/: graph_load.py  project_load.py  result.py
componentSemantics/datasets/: ruscio.py
componentSemantics/features/: extract.py  features.py
componentSemantics/io/: result.py
componentSemantics/resources/java/: stopwords.txt  stopwords_old.txt
componentSemantics/sgnn/: dataset.py  models.py  train_ae.py  train_gnnstrack.py
componentSemantics/visualization/: semantic_plot.py
data/arcanOutput/Aeron/: dep-graph-1-1477f2d10d94bf50c17ea4dca9daef395ba60628.graphml
data/arcanOutput/Agrona/: dep-graph-1-04f975d2add68872898f49f37f6625b028aa464b.graphml
data/arcanOutput/ArchUnit/: dep-graph-1-0fce8b2fb3063a028d5689ad826e57c25e31f7bb.graphml
data/arcanOutput/Chronicle-Map/: dep-graph-1-13fc38aa49594a4db1b10dbd2b6be8570430131b.graphml
data/arcanOutput/DynamicJasper/: dep-graph-1-d5374e84bf98dc3836928e35f9ad9771fffdbb47.graphml
data/arcanOutput/Erdos/: dep-graph-1-4e0b61f5e1ffd5fcd53981c0464e8e336f4d2c1f.graphml
data/arcanOutput/EventBus/: dep-graph-1-1d995077d0b620a6aae9c60a8b96443113752305.graphml
data/arcanOutput/FXGL/: dep-graph-1-5b0d769b858202a5402de1717e43fe31df8267a6.graphml
data/arcanOutput/FreeBuilder/: dep-graph-1-5baf61a4a2cbb01dd7c26b9082bf17a783ac5cf6.graphml
data/arcanOutput/HikariCP/: dep-graph-1-8217f2082d884f878c8d245dae19ca28dce5577d.graphml
data/arcanOutput/HikariJSON/: dep-graph-1-a90cc5c3e080d755ec9bb47923e3dd3dcb24e9c6.graphml
data/arcanOutput/HotswapAgent/: dep-graph-1-8a38f23d9c99d71de648f6c8fdc7b091322f7edc.graphml
data/arcanOutput/HyperMinHash-java/: dep-graph-1-fa6e208f4f4fe7fa28ab05ec391e42d33bba813b.graphml
data/arcanOutput/JCTools/: dep-graph-1-b4eae437b65fee59eddc266a0b7f7c85e19b25bf.graphml
data/arcanOutput/JGiven/: dep-graph-1-762b3c537c27e8442a6c3a3c7d16a4a76dd3c813.graphml
data/arcanOutput/JSAT/: dep-graph-1-140079ade3654bef67503605fd63261126dbf9bc.graphml
data/arcanOutput/JavaHamcrest/: dep-graph-1-852235339bac5ba1a56a2fc2b3f222ae97f1ec27.graphml
data/arcanOutput/Jest/: dep-graph-1-fa277faa8e196b5d79adda91571a9ad1e102cad2.graphml
datasetEval/analysis/: NN.py  class_avg_intersection.py  class_informative_words.py  class_informative_words_MNB.py  class_label_similarity.py  cont.ipynb  content.py  kernel_exo.py  model_selection.py  nn_train.py
datasetEval/dataloader/: awesomejava.py  diSipio.py  hiGitClass.py  lact.py
scripts/: .RData  .Rhistory  DatasetsLabels.xlsx  algorithm_intersection.py  all.txt  arcan_understand.py  distances-boxplot.r  embedding-scatter-plot.r  heatmap.r  heatmap_class_sim_3rd.csv  label_cosine.py  label_cosine_SO.py  label_cosine_bert.py  label_cosine_ft.py  num_comm_sizes-boxplot.r  paper-scatter-plot.r  rand_index.csv  term_frequency.py  vocab_avarage.py
(+10127 files in other folders)
